--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
+    "typescript-language-server": "^5.1.3",
     "vite": "^6.2.0"
   }
 }
