feat: 重构AI供应商配置系统并实现兑换码功能
- 移除前端环境变量中的VITE_GEMINI_API_KEY，改为后端统一管理供应商配置
- 新增AI供应商配置模型与数据库表，支持多供应商动态配置
- 实现兑换码系统，包含生成、兑换、管理等功能
- 新增用户AI权限有效期字段，支持通过兑换码延长访问权限
- 添加供应商配置管理API和兑换码相关API接口
- 实现AI代理中间件，统一处理模型请求和流式响应
- 前端新增兑换码兑换界面和管理页面
- 使用IndexedDB缓存项目数据和模型列表
- 完善文档，新增AI接口和兑换码接口说明

--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.38.0",
+    "idb": "^8.0.3",
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
