--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -40,3 +40,7 @@ logging:
 rate_limit:
   requests_per_second: 100
   burst: 200
+
+ai:
+  default_provider: gemini
+  providers_path: "./configs/providers"
