feat: 添加AI功能测试和Agent Writer服务
- 添加AI功能全量测试框架和测试脚本
- 实现Agent Writer服务用于智能写作
- 添加工作流流式服务支持
- 更新AI配置管理和模型服务
- 添加函数调用服务支持
- 更新API文档和配置说明

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -44,3 +44,6 @@ rate_limit:
 ai:
   default_provider: gemini
   providers_path: "./configs/providers"
+  allow_insecure_http: false
+  models_cache_ttl: 3600
+  use_stale_cache_on_error: true
